# crawler

./: .gitignore  README.md  justfile  main.py  product_crawler.py  pyproject.toml  setup.sh
modules/: crawler_engine.py  crawler_interface.py
modules/datastore/: __init__.py  image_repository.py  non_crawlable_url_repository.py  product_repository.py  sqlite_connection_manager.py  sqlite_repository.py  variation_repository.py
modules/db/: __init__.py  failed_crawl_repository.py  image_repository.py  product_repository.py
modules/extractors/: artisankala_simple_product_extractor.py
modules/utils/: formatters.py  image_converter.py  incremental_id_generator.py  safely_parse_json_string.py  xml_to_json.py
tests/utils/: test_incremental_id_generator.py
