[project]
name = "crawler"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohammad  Rajaei",email = "mrajaeim.pro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.50.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
