[project]
name = "crawler"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohammad  Rajaei",email = "mrajaeim.pro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.50.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "modules"  # Change this to your actual project name
version = "0.1.0"
description = "Crawler modules"
authors = ["Mohammad Javad Rajaei <mrajaeim.pro@gmail.com>"]
packages = [{include = "modules"}]
